fix overflow issue

--- a/src/components/v3/Badge/styles.module.css
+++ b/src/components/v3/Badge/styles.module.css
@@ -63,3 +63,7 @@
 .badgeAnswer {
     font-weight: 700;
 }
+
+.badgeDescription {
+    overflow-wrap: anywhere;
+}
